database connection setup

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=104.248.225.108;port=3306;database=salt_tech;user=salt_tech;password=Password123#@!"
+  }
 }
